--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <!--TODO favicon <link rel="icon" type="i" href="favicon.ico"> -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&family=Source+Sans+Pro&display=swap" rel="stylesheet">
+    <link href=" https://cdn.jsdelivr.net/npm/pdfjs-dist@3.4.120/web/pdf_viewer.min.css " rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -41,9 +42,17 @@
         </nav>
 
         <!--main content area-->
-        <div class="teaser-text">
-            <img src="img/teaser-container.svg" alt="">
-        </div>
+        <section class="home">
+            <div class="teaser-text">
+                <img src="img/teaser-container.svg" alt="">
+            </div>  
+        </section>
+
+       <!-- <section class="iso-cert-pdf hidden">
+            <canvas id="the-canvas"></canvas>
+        </section>
+        -->
+
         <!--footer-->
         <footer class="footer">
             <div class="container-fluid">
@@ -60,7 +69,7 @@
 
                     <div class="iso-cert">
                         <div id="iso-wrapper">
-                            <img id="#isocert-icon" src="img/isocert.svg" alt="">
+                            <a href="iso-certificate.html" target="_blank"><img id="#isocert-icon" src="img/isocert.svg" alt=""></a>
                         </div>
                     </div>
 
@@ -79,7 +88,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
-   
+    <script src=" https://cdn.jsdelivr.net/npm/pdfjs-dist@3.4.120/build/pdf.min.js "></script>
+    <script src="js/pdf-viewer.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
