--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <span class="icon-bar"></span>                        
             </button>
 
-            <div class="collapse navbar-collapse" id="myNavbar">
+            <div class="collapse navbar-collapse mr-auto" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
                    <li class="nav-item active"><a href="index.html">HOME</a></li>
                    <li class="nav-item"><a href="#">ÜBER UNS</a></li>
@@ -48,11 +48,6 @@
             </div>  
         </section>
 
-       <!-- <section class="iso-cert-pdf hidden">
-            <canvas id="the-canvas"></canvas>
-        </section>
-        -->
-
         <!--footer-->
         <footer class="footer">
             <div class="container-fluid">
@@ -64,7 +59,7 @@
                 </p> 
                 
                 <div class="copyright">
-                    ©2023 Metallbau Zeilbeck | Umsetzung: <a href="www.ladyviolet.github.io" title="Laura Zeilbeck Design">Laura Zeilbeck Webdesign</a>
+                    ©2023 Metallbau Zeilbeck | Umsetzung: <a href="https://ladyviolet.github.io/" title="Laura Zeilbeck Design" target="_blank">Laura Zeilbeck Webdesign</a>
                     </div>
 
                     <div class="iso-cert">
@@ -77,8 +72,8 @@
                         <div id="social-wrapper">
                             <div class="social-symbols"> 
                                 <img id="follow-us" src="./img/follow-us.svg" alt="">
-                                <img id="facebook-icon" src="./img/facebook-icon.svg" alt="">
-                                <img id="instagram-icon" src="./img/instagram-icon.svg" alt="">
+                                <a href="https://www.facebook.com/MetallbauZeilbeck/" target="_blank"><img id="facebook-icon" src="./img/facebook-icon.svg" alt=""></a>
+                                <a href="https://www.instagram.com/metallbau_zeilbeck/" target="_blank"><img id="instagram-icon" src="./img/instagram-icon.svg" alt=""></a>
                             </div>
                         </div>
                     </div>    
@@ -88,8 +83,18 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.3/ScrollTrigger.min.js"></script>
-    <script src=" https://cdn.jsdelivr.net/npm/pdfjs-dist@3.4.120/build/pdf.min.js "></script>
-    <script src="js/pdf-viewer.js"></script>
     <script src="js/main.js"></script>
+    <script>
+        $(document).ready(function() {
+            $( ".mr-auto .nav-item" ).bind( "click", function(event) {
+                event.preventDefault();
+                var clickedItem = $( this );
+                $( ".mr-auto .nav-item" ).each( function() {
+                    $( this ).removeClass( "active" );
+                });
+                clickedItem.addClass( "active" );
+            });
+        });
+    </script>        
 </body>
 </html>
