added footer-items collapse behaviour

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
                     ©2023 Metallbau Zeilbeck | Umsetzung: <a href="https://ladyviolet.github.io/" title="Laura Zeilbeck Design" target="_blank">Laura Zeilbeck Webdesign</a>
                     </div>
 
-                    <div class="iso-cert">
+                    <div class="iso-cert collapseOnSmall">
                         <div id="iso-wrapper">
                             <a href="iso-certificate.html" target="_blank"><img id="#isocert-icon" src="img/isocert.svg" alt=""></a>
                         </div>
                     </div>
 
-                    <div class="social-block">
+                    <div class="social-block collapseOnSmall">
                         <div id="social-wrapper">
                             <div class="social-symbols"> 
                                 <img id="follow-us" src="./img/follow-us.svg" alt="">
