--- a/index.html
+++ b/index.html
@@ -46,12 +46,21 @@
             <div class="teaser-text">
                 <img src="img/teaser-container.svg" alt="">
             </div>  
-        </section>
+        </section>   
+        
+        <div class="social-block expandOnSmall">
+            <div id="social-wrapper">
+                <div class="social-symbols"> 
+                    <img id="follow-us" src="./img/follow-us.svg" alt="">
+                    <a href="https://www.facebook.com/MetallbauZeilbeck/" target="_blank"><img id="facebook-icon" src="./img/facebook-icon.svg" alt=""></a>
+                    <a href="https://www.instagram.com/metallbau_zeilbeck/" target="_blank"><img id="instagram-icon" src="./img/instagram-icon.svg" alt=""></a>
+                </div>
+            </div>
+        </div> 
 
         <!--footer-->
         <footer class="footer">
             <div class="container-fluid">
-
                 <p class="footer-links" >
                     <a href="#" class="kontakt">Kontakt</a>
                     <a href="#" class="datenschutz">Datenschutz</a>
