--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
         
         <div class="expandOnSmall">
             <div class="social-symbols"> 
-                <img id="follow-us-2" src="./img/follow-us.svg" alt="">
+                <img class="collapseOnVerySmall" id="follow-us-2" src="./img/follow-us.svg" alt="">
                 <a href="https://www.facebook.com/MetallbauZeilbeck/" target="_blank"><img id="facebook-icon" src="./img/facebook-icon.svg" alt=""></a>
                 <a href="https://www.instagram.com/metallbau_zeilbeck/" target="_blank"><img id="instagram-icon" src="./img/instagram-icon.svg" alt=""></a>
-                <a href="iso-certificate.html" target="_blank"><img id="#isocert-icon-small" src="img/isocert-dark-small.svg" alt=""></a>
+                <a href="iso-certificate.html" target="_blank"><img id="isocert-icon-small" src="./img/isocert-dark-small.svg" alt=""></a>
             </div>
         </div> 
 
