--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <section class="main-background">
         <!--header-->
-        <nav class="navbar sticky-top">
+        <nav class="navbar" id="sticky-navbar">
             <a class="navbar-brand hoverShrink" id="shrinkElem-0" href="index.html">
                 <svg xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" inkscape:export-filename="C:\Users\Laura\OneDrive\Metallbau Zeilbeck\Logo\FZ-Logo_WortBildmarke.png" inkscape:export-xdpi="300" inkscape:export-ydpi="300" inkscape:version="1.1.1 (3bf5ae0d25, 2021-09-20)" sodipodi:docname="FZ-Logo_WortBildmarke.svg" viewBox="0 0 178.172 69.741">
                     <sodipodi:namedview inkscape:current-layer="g864" inkscape:cx="925.89" inkscape:cy="104.718" inkscape:document-units="mm" inkscape:pagecheckerboard="0" inkscape:pageopacity="0" inkscape:pageshadow="0" inkscape:window-height="1002" inkscape:window-maximized="1" inkscape:window-width="1920" inkscape:window-x="-8" inkscape:window-y="-8" inkscape:zoom=".664" bordercolor="#999999" borderopacity="1" fit-margin-bottom="0" fit-margin-left="0" fit-margin-right="0" fit-margin-top="0" pagecolor="#ffffff" showgrid="false"/>
@@ -68,10 +68,10 @@
         <div class="expandOnSmall">
             <div class="social-symbols"> 
                 <img class="collapseOnVerySmall" id="follow-us-2" src="./img/follow-us.svg" alt="">
-                <a href="https://www.facebook.com/MetallbauZeilbeck/" target="_blank"><img id="facebook-icon" src="./img/facebook-icon.svg" alt=""></a>
-                <a href="https://www.instagram.com/metallbau_zeilbeck/" target="_blank"><img id="instagram-icon" src="./img/instagram-icon.svg" alt=""></a>
-                <a href="iso-certificate.html" target="_blank"><img id="isocert-icon-small" src="./img/isocert-dark-small.svg" alt=""></a>
+                <a class="hoverShrink" id="shrinkElem-1" href="https://www.facebook.com/MetallbauZeilbeck/" target="_blank"><img id="facebook-icon" src="./img/facebook-icon.svg" alt=""></a>
+                <a class="hoverShrink" id="shrinkElem-2" href="https://www.instagram.com/metallbau_zeilbeck/" target="_blank"><img id="instagram-icon" src="./img/instagram-icon.svg" alt=""></a>
             </div>
+            <a  class="hoverShrink" id="shrinkElem-3" href="iso-certificate.html" target="_blank"><img id="isocert-icon-small" src="./img/isocert-dark-small.svg" alt=""></a>
         </div> 
 
         <!--footer-->
