--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         <div class="expandOnSmall">
             <div class="social-symbols"> 
                 <img class="collapseOnVerySmall" id="follow-us-2" src="./img/follow-us.svg" alt="">
-                <a class="hoverShrink" id="shrinkElem-1" href="https://www.facebook.com/MetallbauZeilbeck/" target="_blank"><img id="facebook-icon" src="./img/facebook-icon.svg" alt=""></a>
-                <a class="hoverShrink" id="shrinkElem-2" href="https://www.instagram.com/metallbau_zeilbeck/" target="_blank"><img id="instagram-icon" src="./img/instagram-icon.svg" alt=""></a>
+                <a class="mobileShrink" id="shrinkElem-0" href="https://www.facebook.com/MetallbauZeilbeck/" target="_blank"><img id="facebook-icon" src="./img/facebook-icon.svg" alt=""></a>
+                <a class="mobileShrink" id="shrinkElem-1" href="https://www.instagram.com/metallbau_zeilbeck/" target="_blank"><img id="instagram-icon" src="./img/instagram-icon.svg" alt=""></a>
             </div>
-            <a  class="hoverShrink" id="shrinkElem-3" href="iso-certificate.html" target="_blank"><img id="isocert-icon-small" src="./img/isocert-dark-small.svg" alt=""></a>
+            <a  class="mobileShrink" id="shrinkElem-2" href="iso-certificate.html" target="_blank"><img id="isocert-icon-small" src="./img/isocert-dark-small.svg" alt=""></a>
         </div> 
 
         <!--footer-->
