map pin bounce mobile

--- a/index.html
+++ b/index.html
@@ -211,10 +211,12 @@
                         <path fill="none" fill-rule="evenodd" stroke="#0eff37" stroke-width=".5014" d="M-384.7004-95.5842h709.0858v402.8213h-709.0858z" style="font-variation-settings:normal"/>
                       </clipPath>
                     </defs>
-                    <g inkscape:groupmode="layer" inkscape:label="Ebene 1" fill-rule="evenodd" clip-path="url(#b)" transform="matrix(1.6706 0 0 1.694 500.1811 -3.5964)">
-                      <path sodipodi:nodetypes="scsss" fill="#c71585" stroke="#991066" stroke-width=".9" d="M-74.42 112.2889c.0001 7.0448-12.7556 21.7515-12.7556 21.7515s-12.7557-14.7067-12.7557-21.7515 5.711-12.7557 12.7557-12.7557c7.0448 0 12.7557 5.711 12.7557 12.7557z"/>
-                      <circle cx="-87.1756" cy="112.5535" r="8.034" fill="#981065" opacity=".98"/>
-                    </g>
+                    <a href="https://goo.gl/maps/MEsyf9M32iCaCbWw5?coh=178573&entry=tt" target="_blank">
+                        <g id="mapIcon-small" inkscape:groupmode="layer" inkscape:label="Ebene 1" fill-rule="evenodd" clip-path="url(#b)" transform="matrix(1.6706 0 0 1.694 500.1811 -3.5964)">
+                        <path sodipodi:nodetypes="scsss" fill="#c71585" stroke="#991066" stroke-width=".9" d="M-74.42 112.2889c.0001 7.0448-12.7556 21.7515-12.7556 21.7515s-12.7557-14.7067-12.7557-21.7515 5.711-12.7557 12.7557-12.7557c7.0448 0 12.7557 5.711 12.7557 12.7557z"/>
+                        <circle cx="-87.1756" cy="112.5535" r="8.034" fill="#981065" opacity=".98"/>
+                        </g>
+                    </a>
                   </svg>
                   
             </div>
