--- a/index.html
+++ b/index.html
@@ -182,9 +182,9 @@
                         93326 Abensberg<br>
                         Deutschland
                     </address>
-                    <p>Telefon: <a href="tel: 499443905510">+49 9443 905510</a><br>
-                    E-Mail: <a href="mailto:info@metallbau-zeilbeck.de">info@metallbau-zeilbeck.de</a><br>
-                    Homepage: <a href="https://www.metallbau-zeilbeck.de/" target="_blank">https://www.metallbau-zeilbeck.de/</a></p>
+                    <p><i class="fa fa-phone fa-lg" aria-hidden="true"></i><a href="tel: 499443905510"> +49 9443 905510</a><br>
+                        <i class="fa fa-envelope fa-lg" aria-hidden="true"></i><a href="mailto:info@metallbau-zeilbeck.de"> info@metallbau-zeilbeck.de</a><br>
+                        <i class="fa fa-globe fa-lg" aria-hidden="true"></i> <a href="https://www.metallbau-zeilbeck.de/" target="_blank"> https://www.metallbau-zeilbeck.de/</a></p>
                     <br>
             </div>
 
