--- a/index.html
+++ b/index.html
@@ -185,21 +185,25 @@
                     <p><i class="fa fa-phone fa-lg" aria-hidden="true"></i><a href="tel: 499443905510"> +49 9443 905510</a><br>
                         <i class="fa fa-envelope fa-lg" aria-hidden="true"></i><a href="mailto:info@metallbau-zeilbeck.de"> info@metallbau-zeilbeck.de</a><br>
                         <i class="fa fa-globe fa-lg" aria-hidden="true"></i> <a href="https://www.metallbau-zeilbeck.de/" target="_blank"> https://www.metallbau-zeilbeck.de/</a></p>
-                    <br>
+                    
             </div>
 
             <div class="img-container ">
-                <svg class="location collapseOnSmall" id="locSVG" xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" inkscape:version="1.1.1 (3bf5ae0d25, 2021-09-20)" sodipodi:docname="GoogleMaps.svg" id="svg5" version="1.1" viewBox="0 0 1711.817 689.5563">
-                    <sodipodi:namedview inkscape:current-layer="layer1" inkscape:cx="8024.7776" inkscape:cy="1018.5459" inkscape:document-units="mm" inkscape:pagecheckerboard="0" inkscape:pageopacity="0" inkscape:pageshadow="0" inkscape:window-height="1002" inkscape:window-maximized="1" inkscape:window-width="1920" inkscape:window-x="-8" inkscape:window-y="-8" inkscape:zoom=".1173" id="namedview7" bordercolor="#999999" borderopacity="1" fit-margin-bottom="0" fit-margin-left="0" fit-margin-right="0" fit-margin-top="0" pagecolor="#ffffff" showgrid="false"/>
-                    <a href="https://goo.gl/maps/MEsyf9M32iCaCbWw5?coh=178573&entry=tt" target="_blank">
-                        <g inkscape:groupmode="layer" inkscape:label="Ebene 1" id="layer1" transform="translate(649.9852 95.5842)">
-                            <g id="mapIcon" transform="matrix(2.8598 0 0 2.8998 660.3523 -101.7405)">
-                            <path sodipodi:nodetypes="scsss" id="circle926" d="M-74.42 112.2889c.0001 7.0448-12.7556 21.7515-12.7556 21.7515s-12.7557-14.7067-12.7557-21.7515 5.711-12.7557 12.7557-12.7557c7.0448 0 12.7557 5.711 12.7557 12.7557z" style="fill:#c71585;fill-rule:evenodd;stroke:#991066;stroke-width:0.9;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1;stop-color:#000000"/>
-                            <circle id="path1046" cx="-87.1756" cy="112.5535" r="8.034" style="opacity:0.98;fill:#981065;fill-opacity:1;fill-rule:evenodd;stroke-width:2;stop-color:#000000"/>
-                            </g>
-                        </g>
-                    </a>
-                </svg>
+                <svg class="location collapseOnSmall" id="locSVG" xmlns:sodipodi="http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd" inkscape:version="1.1.1 (3bf5ae0d25, 2021-09-20)" sodipodi:docname="location.svg" viewBox="0 0 1000 312.6154">
+                    <sodipodi:namedview inkscape:current-layer="layer1" inkscape:cx="4493.9608" inkscape:cy="219.4775" inkscape:document-units="mm" inkscape:pagecheckerboard="0" inkscape:pageopacity="0" inkscape:pageshadow="0" inkscape:snap-page="true" inkscape:window-height="1002" inkscape:window-maximized="1" inkscape:window-width="1920" inkscape:window-x="-8" inkscape:window-y="-8" inkscape:zoom=".2346" bordercolor="#999999" borderopacity="1" fit-margin-bottom="0" fit-margin-left="0" fit-margin-right="0" fit-margin-top="0" pagecolor="#ffffff" showgrid="false"/>
+                    <defs>
+                      <clipPath id="b" clipPathUnits="userSpaceOnUse">
+                        <path fill="none" fill-rule="evenodd" stroke="#0eff37" stroke-width=".2966" d="M-458.1899 55.3744h598.5765v184.5465h-598.5765z" style="font-variation-settings:normal"/>
+                      </clipPath>
+                      <clipPath id="a" clipPathUnits="userSpaceOnUse">
+                        <path fill="none" fill-rule="evenodd" stroke="#0eff37" stroke-width=".4989" d="M-649.9852-5.3783h1000v312.6154h-1000z" style="font-variation-settings:normal"/>
+                      </clipPath>
+                    </defs>
+                    <g id="mapIcon" inkscape:groupmode="layer" inkscape:label="Ebene 1" fill-rule="evenodd" clip-path="url(#b)" transform="matrix(1.6706 0 0 1.694 765.4659 -93.8023)">
+                      <path sodipodi:nodetypes="scsss" fill="#c71585" stroke="#991066" stroke-width=".9" d="M-74.42 112.2889c.0001 7.0448-12.7556 21.7515-12.7556 21.7515s-12.7557-14.7067-12.7557-21.7515 5.711-12.7557 12.7557-12.7557c7.0448 0 12.7557 5.711 12.7557 12.7557z"/>
+                      <circle cx="-87.1756" cy="112.5535" r="8.034" fill="#981065" opacity=".98"/>
+                    </g>
+                </svg>                  
 
                 <svg class="location expandOnSmall" id="locSVG-small" viewBox="0 0 709.0858 402.8213">
                     <sodipodi:namedview inkscape:current-layer="layer1" inkscape:cx="3023.6749" inkscape:cy="956.7513" inkscape:document-units="mm" inkscape:pagecheckerboard="0" inkscape:pageopacity="0" inkscape:pageshadow="0" inkscape:window-height="1002" inkscape:window-maximized="1" inkscape:window-width="1920" inkscape:window-x="-8" inkscape:window-y="-8" inkscape:zoom=".2346" bordercolor="#999999" borderopacity="1" fit-margin-bottom="0" fit-margin-left="0" fit-margin-right="0" fit-margin-top="0" pagecolor="#ffffff" showgrid="false"/>
