--- a/index.html
+++ b/index.html
@@ -199,10 +199,12 @@
                         <path fill="none" fill-rule="evenodd" stroke="#0eff37" stroke-width=".4989" d="M-649.9852-5.3783h1000v312.6154h-1000z" style="font-variation-settings:normal"/>
                       </clipPath>
                     </defs>
-                    <g id="mapIcon" inkscape:groupmode="layer" inkscape:label="Ebene 1" fill-rule="evenodd" clip-path="url(#b)" transform="matrix(1.6706 0 0 1.694 765.4659 -93.8023)">
-                      <path sodipodi:nodetypes="scsss" fill="#c71585" stroke="#991066" stroke-width=".9" d="M-74.42 112.2889c.0001 7.0448-12.7556 21.7515-12.7556 21.7515s-12.7557-14.7067-12.7557-21.7515 5.711-12.7557 12.7557-12.7557c7.0448 0 12.7557 5.711 12.7557 12.7557z"/>
-                      <circle cx="-87.1756" cy="112.5535" r="8.034" fill="#981065" opacity=".98"/>
-                    </g>
+                    <a href="https://goo.gl/maps/MEsyf9M32iCaCbWw5?coh=178573&entry=tt" target="_blank">
+                        <g id="mapIcon" inkscape:groupmode="layer" inkscape:label="Ebene 1" fill-rule="evenodd" clip-path="url(#b)" transform="matrix(1.6706 0 0 1.694 765.4659 -93.8023)">
+                        <path sodipodi:nodetypes="scsss" fill="#c71585" stroke="#991066" stroke-width=".9" d="M-74.42 112.2889c.0001 7.0448-12.7556 21.7515-12.7556 21.7515s-12.7557-14.7067-12.7557-21.7515 5.711-12.7557 12.7557-12.7557c7.0448 0 12.7557 5.711 12.7557 12.7557z"/>
+                        <circle cx="-87.1756" cy="112.5535" r="8.034" fill="#981065" opacity=".98"/>
+                        </g>
+                    </a>
                 </svg>                  
 
                 <svg class="location expandOnSmall" id="locSVG-small" viewBox="0 0 709.0858 402.8213">
