margin job-type

--- a/index.html
+++ b/index.html
@@ -95,14 +95,14 @@
                 <div class="row">
                     <div class="col-md-6">
                         <h2>Wir stellen ein</h2>
-                        <p><strong><i class="fa fa-chevron-right list-arrow"></i>Metallbauermeister</strong> m/w/d</p>
-                        <p><strong><i class="fa fa-chevron-right list-arrow"></i>Metallbauer Fachrichtung Konstruktionstechnik</strong> m/w/d</p>
-                        <p><strong><i class="fa fa-chevron-right list-arrow"></i>Schweißer WIG/MAG</strong> m/w/d</p>
+                        <p class="job-type"><strong><i class="fa fa-chevron-right list-arrow"></i>Metallbauermeister</strong> m/w/d</p>
+                        <p class="job-type"><strong><i class="fa fa-chevron-right list-arrow"></i>Metallbauer Fachrichtung Konstruktionstechnik</strong> m/w/d</p>
+                        <p class="job-type"><strong><i class="fa fa-chevron-right list-arrow"></i>Schweißer WIG/MAG</strong> m/w/d</p>
                     </div>
 
                    <div class="col-md-6">
                         <h2>Wir bilden aus</h2>
-                        <p><strong><i class="fa fa-chevron-right list-arrow"></i>Metallbauer Fachrichtung Konstruktionstechnik</strong> m/w/d</p>
+                        <p class="job-type"><strong><i class="fa fa-chevron-right list-arrow"></i>Metallbauer Fachrichtung Konstruktionstechnik</strong> m/w/d</p>
                    </div>
                     
                 </div>
