social-block adjustment

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!--TODO favicon <link rel="icon" type="i" href="favicon.ico"> -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/layout.css">
@@ -62,7 +63,7 @@
         
         <!--main content area-->
         <!--HOME-->
-        <section class="content-element home hidden" id="home">
+        <section class="content-element home" id="home">
             <div class="teaser-text">
                 <img src="img/teaser-container.svg" alt="">
             </div>  
@@ -90,7 +91,7 @@
          </section>
 
           <!--JOBS-->
-        <section class="content-element jobs" id="jobs">
+        <section class="content-element jobs hidden" id="jobs">
             <div class="textcontainer">
                 <div class="row">
                     <div class="col-md-6">
