navbar toggle fix + active items

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;900&family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/layout.css">
@@ -194,7 +195,7 @@
                             <input class="form-check-input is-invalid" type="checkbox" value="" id="invalidCheck3" required>
                             Mit der Verarbeitung der im Kontaktformular angegebenen personenbezogen Daten zum Zwecke der Kontaktaufnahme durch Metallbau Zeilbeck bin ich einverstanden. Nähere Informationen zur Datenverarbeitung finden Sie in unserer Datenschutzerklärung.
                         </div>
-                        <div class="invalid-feedback">
+                        <div class="invalid-feedback hidden">
                             <span class="asterisk">*</span>Die Datenschutzerklärung muss zur Übermittlung der Daten akzeptiert werden.
                         </div>
                     </div>
@@ -202,8 +203,6 @@
                 </form>
             </div>
         </section>
-        
-
 
         <!--IMPRESSUM-->
         <section class="content-element impressum hidden" id="impressum">
