mobile menu collapse after click

--- a/index.html
+++ b/index.html
@@ -391,6 +391,10 @@
                 });
                 clickedItem.addClass( "active" );
             });
+
+            $('.navbar-nav>li>a').on('click', function(){
+             $('.navbar-collapse').collapse('hide');
+            });
         });
     </script>        
 </body>
